--- a/output/flutter-code-recipe-for-animatedopacity-widget.html
+++ b/output/flutter-code-recipe-for-animatedopacity-widget.html
@@ -21,15 +21,16 @@
             crossorigin="anonymous">
 
 
-      <link rel="stylesheet" href="./theme/css/pygment.css" />
-      <link rel="stylesheet" href="./theme/css/voidybootstrap.css" />
+      <link rel="stylesheet" href="https://ptyagicodecamp.github.io/theme/css/pygment.css" />
+      <link rel="stylesheet" href="https://ptyagicodecamp.github.io/theme/css/voidybootstrap.css" />
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js" integrity="sha384-FFgGfda92tXC8nCNOxrCQ3R8x1TNkMFqDZVQdDaaJiiVbjkPBXIJBx0o7ETjy8Bh" crossorigin="anonymous"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js" integrity="sha384-ZoaMbDF+4LeFxg6WdScQ9nnR1QC2MIRxA1O9KWEXQwns1G8UNyIEZIQidzb0T1fo" crossorigin="anonymous"></script>
     <![endif]-->
 
-    <link rel="shortcut icon" href="./favicon.ico" />
+    <link rel="shortcut icon" href="https://ptyagicodecamp.github.io/favicon.ico" />
+        <link href="https://ptyagicodecamp.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="techLog Atom Feed" />
   </head>
 
   <body>
@@ -44,7 +45,7 @@
 		  <span class="icon-bar"></span>
 		  <span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="./" rel="home">
+		<a class="navbar-brand" href="https://ptyagicodecamp.github.io/" rel="home">
           <i class="fa fa-home fa-fw fa-lg"> </i> </a>
        </div>
 
@@ -52,9 +53,12 @@
         <ul class="nav navbar-nav">
             <li class="divider"></li>
             <li class="">
-              <a href="./archives.html">Archives</a>
+              <a href="https://ptyagicodecamp.github.io/archives.html">Archives</a>
             </li>
           <li class="divider"></li>
+            <li><a href="https://ptyagicodecamp.github.io/feeds/all.atom.xml" 
+                   type="application/atom+xml" rel="alternate">
+                <i class="fa fa-rss fa-fw fa-lg"></i> </a></li>
         </ul> <!-- /nav -->
       </div> <!-- /navbar-collapse -->
 	  </div> <!-- /container -->
@@ -62,7 +66,7 @@
 
 	<div class="jumbotron" id="overview">
 	  <div class="container">
-		<h1><a href="./">techLog</a></h1>
+		<h1><a href="https://ptyagicodecamp.github.io/">techLog</a></h1>
 		<p class="lead">Explore | Android | Software Engineering</p>
 	  </div>
 	</div>
@@ -75,15 +79,15 @@
 <abbr class="article-header-date">
   Tue 30 January 2018
 </abbr> <h1>
-  <a href="./flutter-code-recipe-for-animatedopacity-widget.html" rel="bookmark"
+  <a href="https://ptyagicodecamp.github.io/flutter-code-recipe-for-animatedopacity-widget.html" rel="bookmark"
      title="Permalink to Flutter code recipe for AnimatedOpacity widget">
     Flutter code recipe for AnimatedOpacity widget
   </a>
 </h1><div class="article-header-info">
   <p>
-      Posted by <a href="./author/ptyagi.html">ptyagi</a>
+      Posted by <a href="https://ptyagicodecamp.github.io/author/ptyagi.html">ptyagi</a>
     in 
-    <a href="./category/development-flutter-cross-platform.html">
+    <a href="https://ptyagicodecamp.github.io/category/development-flutter-cross-platform.html">
       Development, Flutter, Cross-platform</a>
     &nbsp;&nbsp;
   </p>
@@ -96,9 +100,9 @@
 <p><strong><em>Goal:</em></strong> Fade in and out a blue rectangle on click of button. 
 Interface is super simple and will look like this:</p>
 <p>Blue Rectangle animates when button is pressed: </p>
-<p><img alt="Alt Blue Rectangle animates when button is pressed" src="./step1.png"></p>
+<p><img alt="Alt Blue Rectangle animates when button is pressed" src="https://ptyagicodecamp.github.io/step1.png"></p>
 <p>Checkout AnimatedOpacity animation: 
-<img alt="Alt Checkout AnimatedOpacity animation" src="./animated_opacity.webm">
+<img alt="Alt Checkout AnimatedOpacity animation" src="https://ptyagicodecamp.github.io/animated_opacity.webm">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/lKO8YTq_QcU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 <h3>Lets's go!</h3>
 <p>We need three things to accomplish our goal of animating a blue rectangle.
@@ -267,12 +271,12 @@ Recipe source code is available <a href="animated_opacity.dart">here</a></p>
   
 <div class="article-tag-list">
 <span class="label label-default">Tags</span>
-	<a href="./tag/animatedopacity.html"><i class="fa fa-tag"></i>AnimatedOpacity</a>&nbsp;
-	<a href="./tag/flutter.html"><i class="fa fa-tag"></i>flutter</a>&nbsp;
-	<a href="./tag/code-recipes.html"><i class="fa fa-tag"></i>code-recipes</a>&nbsp;
-	<a href="./tag/android.html"><i class="fa fa-tag"></i>android</a>&nbsp;
-	<a href="./tag/android-studio.html"><i class="fa fa-tag"></i>android Studio</a>&nbsp;
-	<a href="./tag/ios.html"><i class="fa fa-tag"></i>iOS</a>&nbsp;
+	<a href="https://ptyagicodecamp.github.io/tag/animatedopacity.html"><i class="fa fa-tag"></i>AnimatedOpacity</a>&nbsp;
+	<a href="https://ptyagicodecamp.github.io/tag/flutter.html"><i class="fa fa-tag"></i>flutter</a>&nbsp;
+	<a href="https://ptyagicodecamp.github.io/tag/code-recipes.html"><i class="fa fa-tag"></i>code-recipes</a>&nbsp;
+	<a href="https://ptyagicodecamp.github.io/tag/android.html"><i class="fa fa-tag"></i>android</a>&nbsp;
+	<a href="https://ptyagicodecamp.github.io/tag/android-studio.html"><i class="fa fa-tag"></i>android Studio</a>&nbsp;
+	<a href="https://ptyagicodecamp.github.io/tag/ios.html"><i class="fa fa-tag"></i>iOS</a>&nbsp;
 </div>  <hr />
   <div class="well well-sm">  <!-- Social media sharing buttons -->
 
@@ -283,7 +287,7 @@ Recipe source code is available <a href="animated_opacity.dart">here</a></p>
 
     <!-- Facebook -->
     <div class="fb-like" 
-        data-href="./flutter-code-recipe-for-animatedopacity-widget.html" 
+        data-href="https://ptyagicodecamp.github.io/flutter-code-recipe-for-animatedopacity-widget.html" 
         data-layout="button_count" 
         data-action="like" data-show-faces="true" 
         data-share="true">
@@ -326,9 +330,9 @@ Recipe source code is available <a href="animated_opacity.dart">here</a></p>
 <div class="col-xs-6 col-md-12">
 <h4><i class="fa fa-folder fa-fw fa-lg"></i> Categories</h4>
 <ul class="list-unstyled category-links">
-  <li><a href="./category/development.html" >
+  <li><a href="https://ptyagicodecamp.github.io/category/development.html" >
     <i class="fa fa-folder-open fa-fw fa-lg"></i> Development</a></li>
-  <li><a href="./category/development-flutter-cross-platform.html" >
+  <li><a href="https://ptyagicodecamp.github.io/category/development-flutter-cross-platform.html" >
     <i class="fa fa-folder-open fa-fw fa-lg"></i> Development, Flutter, Cross-platform</a></li>
 </ul>
 </div>
@@ -336,6 +340,12 @@ Recipe source code is available <a href="animated_opacity.dart">here</a></p>
 </div> <!-- /row -->
 
 
+<h4><i class="fa fa-rss fa-fw fa-lg"></i> Feeds</h4>
+<ul class="list-unstyled">
+    <li><a href="https://ptyagicodecamp.github.io/feeds/all.atom.xml" 
+		   type="application/atom+xml" rel="alternate">
+		<i class="fa fa-rss-square fa-fw fa-lg"></i> Atom Feed</a></li>
+</ul>
 
 <hr />
 
