--- a/output/archives.html
+++ b/output/archives.html
@@ -159,10 +159,10 @@
   <div>
     <dl>
 
-          <dt>September 06, 2022</dt>
+          <dt>August 20, 2022</dt>
 
         <dd>
-          <a href="https://ptyagicodecamp.github.io/vim-quick-references.html">Vim Quick References</a>
+          <a href="https://ptyagicodecamp.github.io/vim-editor-references.html">Vim Editor References</a>
         </dd>
           <dt>March 21, 2021</dt>
 
